--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ text-decoration: none;
           background: linear-gradient(
                          rgba(20,20,20, .5), 
                          rgba(20,20,20, .5)),
-                         url(/images/peppersteak.jpg);
+                         url(./images/peppersteak.jpg);
         
           background-repeat: no-repeat;
           background-position: center;
