--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ text-decoration: none;
           background: linear-gradient(
                          rgba(20,20,20, .5), 
                          rgba(20,20,20, .5)),
-                         url(/images/peppersteak.jpg);
+                         url(./images/peppersteak.jpg);
         
           background-repeat: no-repeat;
           background-position: center;
@@ -273,7 +273,7 @@ text-decoration: none;
           height: 220px;
           background-image: linear-gradient(
             rgba(20,20,20, .5), 
-            rgba(20,20,20, .5)),url(/images/foodbg.jpg);
+            rgba(20,20,20, .5)),url(./images/foodbg.jpg);
           background-position: center;
           background-size: cover;
           background-repeat: no-repeat;
@@ -371,7 +371,7 @@ background-color: rgb(250, 250, 250);
 height: 430px;
 background-image: linear-gradient(
   rgba(20,20,20, .5), 
-  rgba(20,20,20, .5)),url(/images/foodbg.jpg);
+  rgba(20,20,20, .5)),url(./images/foodbg.jpg);
 background-position: center;
 background-size: cover;
 background-repeat: no-repeat;
@@ -469,7 +469,7 @@ color: white;
             background: linear-gradient(
                            rgba(20,20,20, .5), 
                            rgba(20,20,20, .5)),
-                           url(/images/peppersteak.jpg);
+                           url(./images/peppersteak.jpg);
           
             background-repeat: no-repeat;
             background-position: center;
@@ -490,7 +490,7 @@ color: white;
             height: 350px;
             background-image: linear-gradient(
               rgba(20,20,20, .5), 
-              rgba(20,20,20, .5)),url(/images/foodbg.jpg);
+              rgba(20,20,20, .5)),url(./images/foodbg.jpg);
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
@@ -588,7 +588,7 @@ color: white;
   width: 420px;
   background-image: linear-gradient(
     rgba(20,20,20, .5), 
-    rgba(20,20,20, .5)),url(/images/foodbg.jpg);
+    rgba(20,20,20, .5)),url(./images/foodbg.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
